# SpatialMAS

./: .env.example  .gitignore  AGENTS.md  LICENSE  MIGRATION.md  README.md  db.py  main.py  mcp.json  mcp_server.py  pyproject.toml  questions.md  test.py
SpatialMAS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
answers/: question_01.md  question_02.md  question_03.md  question_04.md  question_05.md  question_06.md  question_07.md  question_08.md  question_09.md  question_10.md
paperworks/: 架构图.drawio
paperworks/midreport/: ppt讲稿.md
paperworks/midreport/ai_readable/: 武汉大学大创项目进展中期结题报告常见问题与解决方案.csv
paperworks/midreport/ai_readable/审核要点/: 6cb0d8d4-0ae8-4faf-8bfc-d907493fd473_content_list.json  6cb0d8d4-0ae8-4faf-8bfc-d907493fd473_model.json  content_list_v2.json  full.md  layout.json
paperworks/midreport/ai_readable/最终版石灵奇武汉大学大创项目进展/: ad0bbd03-a879-46f6-9913-b82776125307_content_list.json  content_list_v2.json  (+3 more)
paperworks/midreport/original/: 武汉大学大创项目立项-中期检查-结题验收审核要点.docx  武汉大学大创项目进展-中期-结题报告常见问题与解决方案.xls  武汉大学大创项目进展-中期-结题报告格式参照模板.doc  武汉大学大学生创新训练计划项目审核要点.docx
prompts/: deep_research_system_prompt.md  research_questions.txt
schema/: rules.json  schema.txt
scripts/: generate_schema.py  validate_schema.py
spatialmas/: __init__.py  agent.py  config.py  langchain_tools.py  models.py
spatialmas/infra/: llm_client.py  snowflake_client.py
spatialmas/schema/: loader.py
spatialmas/services/: analysis_service.py  query_service.py  schema_service.py  sql_service.py
tests/: test_schema_relationships.py  test_sql_guard.py
(+10 files in other folders)
